--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -99,27 +99,34 @@
       "Starting Round 1 ...\n",
       " LED: 2    | Arm: 0 | Score:    0 \n",
       " Action: R | Arm: 1 | Score:   -1 \n",
-      " Action: P | Arm: 1 | Score:   -2 \n",
-      " Action: R | Arm: 2 | Score:   -3 \n",
-      " Action: L | Arm: 1 | Score:   -4 \n",
-      " Action: L | Arm: 0 | Score:   -5 \n",
-      " Action: P | Arm: 0 | Score:   -6 \n",
+      " Action: L | Arm: 0 | Score:   -2 \n",
+      " Action: L | Arm: 0 | Score:   -3 \n",
+      " Action: P | Arm: 0 | Score:   -4 \n",
+      " Action: R | Arm: 1 | Score:   -5 \n",
+      " Action: L | Arm: 0 | Score:   -6 \n",
       " Action: P | Arm: 0 | Score:   -7 \n",
-      " Action: R | Arm: 1 | Score:   -8 \n",
-      " Action: R | Arm: 2 | Score:   -9 \n",
-      " Action: L | Arm: 1 | Score:  -10 \n",
-      " Action: P | Arm: 1 | Score:  -11 \n",
-      " Action: L | Arm: 0 | Score:  -12 \n",
+      " Action: P | Arm: 0 | Score:   -8 \n",
+      " Action: P | Arm: 0 | Score:   -9 \n",
+      " Action: P | Arm: 0 | Score:  -10 \n",
+      " Action: L | Arm: 0 | Score:  -11 \n",
+      " Action: P | Arm: 0 | Score:  -12 \n",
       " Action: R | Arm: 1 | Score:  -13 \n",
-      " Action: R | Arm: 2 | Score:  -14 \n",
-      " Action: L | Arm: 1 | Score:  -15 \n",
+      " Action: P | Arm: 1 | Score:  -14 \n",
+      " Action: P | Arm: 1 | Score:  -15 \n",
       "FINAL SCORE:  -15\n",
       "-----------------------------------\n",
       "Starting Round 2 ...\n",
-      " LED: 1    | Arm: 2 | Score:    0 \n",
-      " Action: L | Arm: 1 | Score:   -1 \n",
-      " Action: P | Arm: 1 | Score:   -2 \n",
-      "FINAL SCORE:  -2\n",
+      " LED: 0    | Arm: 2 | Score:    0 \n",
+      " Action: R | Arm: 3 | Score:   -1 \n",
+      " Action: L | Arm: 2 | Score:   -2 \n",
+      " Action: L | Arm: 1 | Score:   -3 \n",
+      " Action: L | Arm: 0 | Score:   -4 \n",
+      " Action: L | Arm: 0 | Score:   -5 \n",
+      " Action: L | Arm: 0 | Score:   -6 \n",
+      " Action: R | Arm: 1 | Score:   -7 \n",
+      " Action: L | Arm: 0 | Score:   -8 \n",
+      " Action: P | Arm: 0 | Score:   -9 \n",
+      "FINAL SCORE:  -9\n",
       "-----------------------------------\n"
      ]
     }
@@ -266,7 +273,7 @@
     "This array is deeply connected to the optimal policy.  What's particularly worth noting is that in the event that we have a perfect estimate of all of the values in `Q`, we can quickly use it to obtain the optimal policy.  To see this, suppose for now that the robot has a perfect estimate of all of the entries in the `Q` array.  Then, it can get the corresponding optimal action corresponding to any state `s` simply by looking at the `s`-th row in `Q`, or `Q[s]`.  As an example, if `s=3`, then `Q[3]=[-4, -5, -5]`.  \n",
     "> Then, to get the optimal action corresponding to state `s`, we need only select the action corresponding to the index that maximizes `Q[s]`.  \n",
     "\n",
-    "In the case that `s=3`, we see that `-4` is the largest entry in `Q[s]` (which appears at index `0`), and so the optimal action is action `0` (which corresponds to moving left).  Take the time now to check that this lines up with both your intuition and the optimal policy above!  To understand more generally why this is the case, note that each entry in `Q[s]` contains the final score if the robot follows the optimal policy, for all moves except (potentially) the first.  Then, one of the three available initial moves must be optimal, and it makes sense that the optimal move will correspond to the action (or index) that yields the largest value in `Q[s]`. "
+    "In the case that `s=3`, we see that `-4` is the largest entry in `Q[s]` (which appears at index `0`), and so the optimal action is action `0` (which corresponds to action left).  Take the time now to check that this lines up with both your intuition and the optimal policy above!  To understand more generally why this is the case, note that each entry in `Q[s]` contains the final score if the robot follows the optimal policy, for all moves except (potentially) the first.  Then, one of the three available initial moves must be optimal, and it makes sense that the optimal move will correspond to the action (or index) that yields the largest value in `Q[s]`.  This fact will come in very useful in the next section, when we talk about how to implement the method in more detail."
    ]
   },
   {
@@ -281,9 +288,17 @@
     "\n",
     "When playing the game, the robot will use the (potentially inaccurate) estimates in `Q` to select actions.  With every game round, the robot will evaluate the current game state, and then choose the action by selecting the index that maximizes `Q[s]`.  Of course, as `Q` gets more and more accurate, the robot will select better and better actions!  That is, its strategy for selecting actions will gradually start to resemble the optimal policy.\n",
     "\n",
-    "You can see this implementation below in the `play_round` function.  Note that the function takes the estimates in `Q` as input.  It returns a list of `(state, action, points)` tuples, detailing how the game evolved.  Note that for each tuple, `points=-1`, which indicates that the robot loses a single point after each action.\n",
+    "You can see this implementation below in the `play_round` function.  Note that the function takes the estimates in `Q` as input.  It returns a list of `(state, action)` tuples, detailing how the game evolved. \n",
     "\n",
-    "The output of the code cell prints how the game evolved for three different rounds."
+    "The output of the code cell prints how the game evolved for three different rounds.\n",
+    "\n",
+    "Each round has corresponding output that looks somewhat like the snippet below:\n",
+    "```\n",
+    "Round 1: [(9, 2), (10, 1)] | Score: -2 \n",
+    "```\n",
+    "In the sample snippet above, the game began in state `9`, and the robot's initial action was `2`.  This changed the game to state `10`, and the robot selected action `1` to end the game.  The robot's final score was `(-1)+(-1)=-2`.\n",
+    "\n",
+    "Note that since the robot is always deducted a point after each choice of action, we can obtain the robot's game score from the length of the `game_round` list that is returned by the `play_round` function."
    ]
   },
   {
@@ -295,12 +310,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Round 1: [(11, 1, -1), (11, 0, -1), (10, 0, -1), (9, 0, -1), (8, 0, -1), (8, 0, -1), (8, 0, -1), (8, 0, -1), (8, 0, -1), (8, 0, -1), (8, 1, -1), (8, 2, -1), (9, 0, -1), (8, 1, -1), (8, 0, -1)] \n",
-      "\n",
-      "Round 2: [(12, 0, -1), (12, 2, -1), (13, 1, -1), (13, 1, -1), (13, 2, -1), (14, 2, -1), (15, 2, -1), (15, 0, -1), (14, 0, -1), (13, 1, -1), (13, 1, -1), (13, 0, -1), (12, 2, -1), (13, 0, -1), (12, 2, -1)] \n",
-      "\n",
-      "Round 3: [(10, 1, -1)] \n",
-      "\n"
+      "Round 1: [(2, 0), (1, 0), (0, 2), (1, 1), (1, 2), (2, 2), (3, 0), (2, 2), (3, 2), (3, 2), (3, 0), (2, 1), (2, 0), (1, 2), (2, 2)] | Score: -15\n",
+      "Round 2: [(15, 2), (15, 2), (15, 0), (14, 1), (14, 2), (15, 1)] | Score: -6\n",
+      "Round 3: [(5, 0), (4, 0), (4, 0), (4, 0), (4, 2), (5, 0), (4, 2), (5, 2), (6, 2), (7, 2), (7, 2), (7, 2), (7, 0), (6, 0), (5, 0)] | Score: -15\n"
      ]
     }
    ],
@@ -309,8 +321,7 @@
     "import random\n",
     "\n",
     "def play_round(env, Q=None):\n",
-    "    # default value for Q if not provided\n",
-    "    if Q is None:\n",
+    "    if Q is None: # default value for Q if not provided\n",
     "        Q = -5*np.ones((env.nS, env.nA), dtype=float)\n",
     "    # start the round\n",
     "    game_round = []\n",
@@ -319,42 +330,69 @@
     "\n",
     "    # select a random action\n",
     "    action = env.get_random_action()            # select initial random action \n",
-    "    arm, points, done = env.step(action)        # take initial action\n",
-    "    game_round.append((state, action, points))  # save initial state, initial action, and reward\n",
+    "    arm, _, done = env.step(action)             # take initial action\n",
+    "    game_round.append((state, action))          # save initial state and initial action\n",
     "\n",
     "    # finish the round\n",
     "    while not done:\n",
     "        state = get_state(led, arm, env.nLED)       # get next game state\n",
     "        best_actions = np.argwhere(Q[state] == np.amax(Q[state])).flatten() # all actions that maximize Q[state]\n",
     "        action = random.choice(best_actions)        # select action from set of best actions\n",
-    "        arm, points, done = env.step(action)        # take action\n",
-    "        game_round.append((state, action, points))  # save state, action, and reward\n",
+    "        arm, _, done = env.step(action)             # take action\n",
+    "        game_round.append((state, action))          # save state and action\n",
     "    \n",
     "    return game_round\n",
     "\n",
+    "# play the game for three separate rounds\n",
     "for i in range(1,4):\n",
     "    game_round = play_round(env)\n",
-    "    print(('Round %d:' % i), game_round, '\\n')"
+    "    print('Round %d: %s | Score: %d' % (i, game_round, -len(game_round)))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You will implement the **Monte Carlo with Exploring Starts** method in the `monte_carlo` function in the code cell below.  As described above, we begin by initializing `Q[s,a]=-5` for each `s` and `a`.  Then, we run the algorithm for `num_rounds` game rounds.  The robot plays a single round using the `play_round` function and the most recent estimates in `Q`.  Then, the results of the round (in `game_round`) are used to update the estimates in `Q`.  Then, the loop continues, where the agent plays a single game round and updates the estimates in `Q`.  Although the agent will initially be quite bad at choosing appropriate game moves, you will notice that it demonstrates a high level of skill towards the later game rounds!\n",
+    "You will implement the **Monte Carlo with Exploring Starts** method in the `monte_carlo` function in the code cell below.  As described above, we begin by initializing `Q[s,a]=-5` for each `s` and `a`.  Then, the robot plays a single round using the `play_round` function, and the results of the round (in `game_round`) are used to update the estimates in `Q`.  The loop continues for a total of `num_rounds` game rounds, where the agent updates the estimates in `Q` between rounds.  Although the robot will initially be quite bad at choosing game moves, it will demonstrate a high level of skill later in gameplay!\n",
     "\n",
-    "Some of this code has been provided for you, and your task is to write the code to update the values in `Q`.\n",
+    "Some of this code has been provided for you, and your task is to write the code to update the values in `Q`.  \n",
     "\n",
-    "And so here's the main idea behind how the algorithm should operate."
+    "Don't worry about this just yet - for now, run the code cell below to verify that the code works.  *And so here's the main idea behind how the algorithm should operate ...*"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Game Round 100/100.\n",
+      "\n",
+      "Estimated Optimal Policy:\n",
+      "LED: 0 | Arm: 0 | State:  0 | Best Action: P\n",
+      "LED: 0 | Arm: 1 | State:  1 | Best Action: L\n",
+      "LED: 0 | Arm: 2 | State:  2 | Best Action: L\n",
+      "LED: 0 | Arm: 3 | State:  3 | Best Action: L\n",
+      "LED: 1 | Arm: 0 | State:  4 | Best Action: R\n",
+      "LED: 1 | Arm: 1 | State:  5 | Best Action: P\n",
+      "LED: 1 | Arm: 2 | State:  6 | Best Action: L\n",
+      "LED: 1 | Arm: 3 | State:  7 | Best Action: L\n",
+      "LED: 2 | Arm: 0 | State:  8 | Best Action: R\n",
+      "LED: 2 | Arm: 1 | State:  9 | Best Action: R\n",
+      "LED: 2 | Arm: 2 | State: 10 | Best Action: P\n",
+      "LED: 2 | Arm: 3 | State: 11 | Best Action: L\n",
+      "LED: 3 | Arm: 0 | State: 12 | Best Action: R\n",
+      "LED: 3 | Arm: 1 | State: 13 | Best Action: R\n",
+      "LED: 3 | Arm: 2 | State: 14 | Best Action: R\n",
+      "LED: 3 | Arm: 3 | State: 15 | Best Action: P\n",
+      "\n",
+      "Correct Entries: 16/16\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "\n",
@@ -378,44 +416,16 @@
     "        game_round = play_round(env, Q)\n",
     "        \n",
     "        # TODO: use game round to update Q\n",
-    "        sa_set = set([(x[0], x[1]) for x in episode])\n",
-    "        for state, action in sa_set:\n",
-    "            first_idx = min([i for i,x in enumerate(episode) if x[0] == state and x[1] == action])\n",
-    "            scores_sum[state][action] += sum([x[2] for i,x in enumerate(episode[first_idx:])])\n",
+    "        for state, action in set(game_round):\n",
+    "            first_idx = min([i for i,x in enumerate(game_round) if x==(state,action)])\n",
+    "            scores_sum[state][action] += -len(game_round[first_idx:])\n",
     "            scores_count[state][action] += 1\n",
     "            Q[state][action] = scores_sum[state][action]/scores_count[state][action]\n",
     "            \n",
-    "    return Q"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "Game Round 1/80."
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'get_episode' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-5fc031fb14ca>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mQ\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmonte_carlo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0menv\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m80\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m# print the learned policy\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'\\n\\nEstimated Optimal Policy:'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mstate\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mQ\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-4-4feb14041bf0>\u001b[0m in \u001b[0;36mmonte_carlo\u001b[0;34m(env, num_rounds)\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m         \u001b[0;31m# get episode\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m         \u001b[0mepisode\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_episode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0menv\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mQ\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m         \u001b[0;31m# use episode to update Q\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'get_episode' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "Q = monte_carlo(env, 80)\n",
+    "    return Q\n",
+    "\n",
+    "# run the algorithm\n",
+    "Q = monte_carlo(env)\n",
     "\n",
     "# print the learned policy\n",
     "print('\\n\\nEstimated Optimal Policy:')\n",
