--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -30,7 +30,7 @@
     "- The lit LED is turned off when the robot pushes its corresponding button, but pushing buttons connected to unlit LEDs has no effect (i.e., they are never turned on by the robot).  \n",
     "- If the robotic arm is hovering over the leftmost button at location `0` and decides to move left, we imagine that the arm hits an imaginary wall, and the arm stays where it is.  Likewise, if the arm is hovering over the button at position `3` and decides to move right, then at the next point in the game, the arm will have maintained its position at location `3` (the rightmost location in the line).\n",
     "\n",
-    "The round ends when the robot pushes the correct button to turn off the lit LED.  Your goal in this notebook is to implement an algorithm that can learn from gameplay the optimal strategy to attain the highest (or least negative) score at each round.  To accomplish this, your robot will need to learn how to turn off the lit LED in as few movements as possible.  "
+    "The round ends either (1) when the robot pushes the correct button to turn off the lit LED, or (2) when the robot has played **15** moves in the round, _whatever happens first_.  Your goal in this notebook is to implement an algorithm that can learn from gameplay the optimal strategy to attain the highest (or least negative) score at each round.  To accomplish this, your robot will need to learn how to turn off the lit LED in as few movements as possible.  "
    ]
   },
   {
@@ -97,23 +97,11 @@
      "output_type": "stream",
      "text": [
       "Starting Round 1 ...\n",
-      " LED: 2    | Arm: 0 | Score:    0 \n",
-      " Action: R | Arm: 1 | Score:   -1 \n",
-      " Action: L | Arm: 0 | Score:   -2 \n",
-      " Action: L | Arm: 0 | Score:   -3 \n",
-      " Action: P | Arm: 0 | Score:   -4 \n",
-      " Action: R | Arm: 1 | Score:   -5 \n",
-      " Action: L | Arm: 0 | Score:   -6 \n",
-      " Action: P | Arm: 0 | Score:   -7 \n",
-      " Action: P | Arm: 0 | Score:   -8 \n",
-      " Action: P | Arm: 0 | Score:   -9 \n",
-      " Action: P | Arm: 0 | Score:  -10 \n",
-      " Action: L | Arm: 0 | Score:  -11 \n",
-      " Action: P | Arm: 0 | Score:  -12 \n",
-      " Action: R | Arm: 1 | Score:  -13 \n",
-      " Action: P | Arm: 1 | Score:  -14 \n",
-      " Action: P | Arm: 1 | Score:  -15 \n",
-      "FINAL SCORE:  -15\n",
+      " LED: 2    | Arm: 2 | Score:    0 \n",
+      " Action: R | Arm: 3 | Score:   -1 \n",
+      " Action: L | Arm: 2 | Score:   -2 \n",
+      " Action: P | Arm: 2 | Score:   -3 \n",
+      "FINAL SCORE:  -3\n",
       "-----------------------------------\n",
       "Starting Round 2 ...\n",
       " LED: 0    | Arm: 2 | Score:    0 \n",
@@ -121,12 +109,18 @@
       " Action: L | Arm: 2 | Score:   -2 \n",
       " Action: L | Arm: 1 | Score:   -3 \n",
       " Action: L | Arm: 0 | Score:   -4 \n",
-      " Action: L | Arm: 0 | Score:   -5 \n",
-      " Action: L | Arm: 0 | Score:   -6 \n",
-      " Action: R | Arm: 1 | Score:   -7 \n",
-      " Action: L | Arm: 0 | Score:   -8 \n",
-      " Action: P | Arm: 0 | Score:   -9 \n",
-      "FINAL SCORE:  -9\n",
+      " Action: R | Arm: 1 | Score:   -5 \n",
+      " Action: R | Arm: 2 | Score:   -6 \n",
+      " Action: L | Arm: 1 | Score:   -7 \n",
+      " Action: R | Arm: 2 | Score:   -8 \n",
+      " Action: L | Arm: 1 | Score:   -9 \n",
+      " Action: L | Arm: 0 | Score:  -10 \n",
+      " Action: L | Arm: 0 | Score:  -11 \n",
+      " Action: R | Arm: 1 | Score:  -12 \n",
+      " Action: P | Arm: 1 | Score:  -13 \n",
+      " Action: R | Arm: 2 | Score:  -14 \n",
+      " Action: L | Arm: 1 | Score:  -15 \n",
+      "FINAL SCORE:  -15\n",
       "-----------------------------------\n"
      ]
     }
@@ -282,13 +276,15 @@
    "source": [
     "### Implementation Details\n",
     "\n",
-    "The algorithm begins with an initial guess for the values in `Q`.  In this session, we initialize `Q[s,a]=-5` for each `s` and `a`.  Of course, this initial estimate isn't so great, and we provide this bad initial estimate so that the robot can learn for itself how to improve it.  We don't want to give the robot too much of a head start!\n",
+    "The **Monte Carlo with Exploring Starts** method begins with an initial guess for the values in `Q`.  In this session, we initialize `Q[s,a]=-5` for each `s` and `a`.  Of course, this initial estimate isn't so great, and we provide this bad initial estimate so that the robot can learn for itself how to improve it.  We don't want to give the robot too much of a head start!\n",
     "\n",
-    "Then, as the robot plays the game, the estimates in `Q` will be gradually improved.  You'll have the chance to implement this soon.\n",
+    "Then, as the robot plays the game, the estimates in `Q` will be gradually improved.  You'll have the chance to implement this soon. \n",
     "\n",
-    "When playing the game, the robot will use the (potentially inaccurate) estimates in `Q` to select actions.  With every game round, the robot will evaluate the current game state, and then choose the action by selecting the index that maximizes `Q[s]`.  Of course, as `Q` gets more and more accurate, the robot will select better and better actions!  That is, its strategy for selecting actions will gradually start to resemble the optimal policy.\n",
+    "At the beginning of any game round, the robot observes the initial state of the game.  Then, it selects an action completely at random.  This initial randomness is designed so that the robot can effectively explore the set of possible strategies.  \n",
     "\n",
-    "You can see this implementation below in the `play_round` function.  Note that the function takes the estimates in `Q` as input.  It returns a list of `(state, action)` tuples, detailing how the game evolved. \n",
+    "But then, for all later moves in the round, the robot uses the entries in `Q` to decide actions.  In particular, for each move, the robot evaluates the current game state `s`, and then chooses an action by selecting the index that maximizes `Q[s]`.  Of course, as `Q` gets more and more accurate, the robot will select better and better actions!  That is, its strategy for selecting actions will gradually start to resemble the optimal policy.\n",
+    "\n",
+    "You can see how the robot uses the estimates in `Q` to select actions in the `play_round` function in the code cell below.  The function uses the estimates in `Q` to play a single game round, and it returns a list of `(state, action)` tuples, detailing how the game evolved. \n",
     "\n",
     "The output of the code cell prints how the game evolved for three different rounds.\n",
     "\n",
@@ -303,16 +299,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Round 1: [(2, 0), (1, 0), (0, 2), (1, 1), (1, 2), (2, 2), (3, 0), (2, 2), (3, 2), (3, 2), (3, 0), (2, 1), (2, 0), (1, 2), (2, 2)] | Score: -15\n",
-      "Round 2: [(15, 2), (15, 2), (15, 0), (14, 1), (14, 2), (15, 1)] | Score: -6\n",
-      "Round 3: [(5, 0), (4, 0), (4, 0), (4, 0), (4, 2), (5, 0), (4, 2), (5, 2), (6, 2), (7, 2), (7, 2), (7, 2), (7, 0), (6, 0), (5, 0)] | Score: -15\n"
+      "Round 1: [(15, 0), (14, 1), (14, 2), (15, 1)] | Score: -4\n",
+      "Round 2: [(8, 0), (8, 1), (8, 0), (8, 0), (8, 2), (9, 0), (8, 0), (8, 0), (8, 1), (8, 2), (9, 1), (9, 1), (9, 2), (10, 2), (11, 2)] | Score: -15\n",
+      "Round 3: [(13, 2), (14, 0), (13, 0), (12, 1), (12, 0), (12, 2), (13, 0), (12, 2), (13, 0), (12, 0), (12, 1), (12, 0), (12, 0), (12, 1), (12, 1)] | Score: -15\n"
      ]
     }
    ],
@@ -353,16 +349,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You will implement the **Monte Carlo with Exploring Starts** method in the `monte_carlo` function in the code cell below.  As described above, we begin by initializing `Q[s,a]=-5` for each `s` and `a`.  Then, the robot plays a single round using the `play_round` function, and the results of the round (in `game_round`) are used to update the estimates in `Q`.  The loop continues for a total of `num_rounds` game rounds, where the agent updates the estimates in `Q` between rounds.  Although the robot will initially be quite bad at choosing game moves, it will demonstrate a high level of skill later in gameplay!\n",
+    "You will implement the **Monte Carlo with Exploring Starts** method in the `monte_carlo` function in the code cell below.  As described above, the method begins by initializing `Q`.  Then, the robot plays a single round using the `play_round` function, and the results of the round (in `game_round`) are used to update the estimates in `Q`.  The loop continues for a total of `num_rounds` game rounds, where the agent updates the estimates in `Q` between rounds.  Although the robot will initially be quite bad at choosing game moves, it will demonstrate a high level of skill later in gameplay!\n",
     "\n",
-    "Some of this code has been provided for you, and your task is to write the code to update the values in `Q`.  \n",
+    "Most of this code has been provided for you, and your task is to write the code to update the entries in `Q`.  To see how this code should operate, consider how the robot can estimate an entry corresponding to a particular state-action pair `s,a`.  For instance, consider `s=15`, `a=0`, and `Q[15,0]`.  Remember that `Q[15,0]` contains the robot's **estimate** for the **highest** score it can possibly obtain in the game, if the game starts in state `15`, and the robot selects action `0` for its first move.  \n",
     "\n",
-    "Don't worry about this just yet - for now, run the code cell below to verify that the code works.  *And so here's the main idea behind how the algorithm should operate ...*"
+    "> The main idea behind updating the values in `Q` is that the robot will play many game rounds that begin in state `s=15`, where the agent selects action `a=0` as its first move, and it will get a useful estimate for `Q[15,0]` simply by averaging the final scores obtained from these rounds.  \n",
+    "\n",
+    "For instance, suppose by chance that the first three game rounds begin with state `15` and action `0`:\n",
+    "\n",
+    "```\n",
+    "Round 1: [(15, 0), (14, 1), (14, 2), (15, 1)] | Score: -4\n",
+    "Round 2: [(15, 0), (14, 0), (13, 0), (12, 2), (13, 2), (14, 0), (13, 1), (13, 0)] | Score: -8\n",
+    "Round 3: [(15, 0), (14, 0), (13, 1), (13, 2), (14, 2), (15, 2)] | Score: -6\n",
+    "```\n",
+    "After round `1`, the method will set the value of `Q[15,0]` as the observed score that was obtained, or `-4`.  Then, after round `2`, `Q[15,0]` is set to the average of `-4` and `-8`, or `-6`.  Then, after the round `3`, `Q[15,0]` is the average of `-4`, `-8`, and `-6`, or `-6`.\n",
+    "\n",
+    "But note that these games can also be used to estimate the entries in `Q` corresponding to other state-action pairs.  For instance, consider `Q[14,1]`.  Even though round `1` did not technically start with state `14` and action `1`, the mini-round obtained by removing `(15, 0)` proves particularly useful for estimating `Q[14,1]`.  In particular, the mini-round `[(14, 1), (14, 2), (15, 1)]` shows that after the robot selected action `1` when the game was in state `14`, the robot effectively received a final score of `-3`.\n",
+    "\n",
+    "Before describing the algorithm in full, it is necessary to talk about what should happen in the event that the same state-action pair appears in a round multiple times.  For instance, consider `(13, 0)` in round `2`.  Should we use a \"final score\" of `-6` (taken from the first occurrence of `(13, 0)` in the round), or `-1` (derived from the final occurrence of `(13, 0)`)?  Or should we use both?\n",
+    "> For this session, if the same state-action pair appears multiple times in a round, you are encouraged to consider only mini-rounds that begin at the first occurrence.  We refer to each appearance of a state-action pair as a **visit**, and consider\n",
+    "\n",
+    "This yields a method known as **First-Visit** Monte Carlo with Exploring Starts.  (_Another option, that you are encouraged to explore later, is **Every-Visit** Monte Carlo with Exploring Starts._)  \n",
+    "\n",
+    "So, in this case, the robot should set the value of `Q[13,0]` to `-6` after round `2`.\n",
+    "\n",
+    "Now that we have discussed an example, please use these ideas to update the entries in `Q` in the `monte_carlo` function in the code cell below.\n",
+    "> In the **Monte Carlo with Exploring Starts** method, the robot keeps track of the scores obtained after visiting each state-action pair.  After the end of each game round, the robot updates its estimate of `Q[s,a]` for each $(s, a)$ that appeared in the round.  In particular, it looks at the mini-round following each `(s, a)` and sets `Q[s,a]` to be equal to the average of all ... almost done ... just need to finish"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -383,13 +400,13 @@
       "LED: 2 | Arm: 0 | State:  8 | Best Action: R\n",
       "LED: 2 | Arm: 1 | State:  9 | Best Action: R\n",
       "LED: 2 | Arm: 2 | State: 10 | Best Action: P\n",
-      "LED: 2 | Arm: 3 | State: 11 | Best Action: L\n",
+      "LED: 2 | Arm: 3 | State: 11 | Best Action: P\n",
       "LED: 3 | Arm: 0 | State: 12 | Best Action: R\n",
       "LED: 3 | Arm: 1 | State: 13 | Best Action: R\n",
       "LED: 3 | Arm: 2 | State: 14 | Best Action: R\n",
       "LED: 3 | Arm: 3 | State: 15 | Best Action: P\n",
       "\n",
-      "Correct Entries: 16/16\n"
+      "Correct Entries: 15/16\n"
      ]
     }
    ],
