--- a/Notebook-Solution.ipynb
+++ b/Notebook-Solution.ipynb
@@ -89,9 +89,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting Round 1 ...\n",
+      " LED: 3    | Arm: 0 | Score:    0 \n",
+      " Action: R | Arm: 1 | Score:   -1 \n",
+      " Action: L | Arm: 0 | Score:   -2 \n",
+      " Action: L | Arm: 0 | Score:   -3 \n",
+      " Action: P | Arm: 0 | Score:   -4 \n",
+      " Action: L | Arm: 0 | Score:   -5 \n",
+      " Action: L | Arm: 0 | Score:   -6 \n",
+      " Action: P | Arm: 0 | Score:   -7 \n",
+      " Action: P | Arm: 0 | Score:   -8 \n",
+      " Action: P | Arm: 0 | Score:   -9 \n",
+      " Action: P | Arm: 0 | Score:  -10 \n",
+      " Action: P | Arm: 0 | Score:  -11 \n",
+      " Action: P | Arm: 0 | Score:  -12 \n",
+      " Action: L | Arm: 0 | Score:  -13 \n",
+      " Action: L | Arm: 0 | Score:  -14 \n",
+      " Action: P | Arm: 0 | Score:  -15 \n",
+      "FINAL SCORE:  -15\n",
+      "-----------------------------------\n",
+      "Starting Round 2 ...\n",
+      " LED: 0    | Arm: 1 | Score:    0 \n",
+      " Action: L | Arm: 0 | Score:   -1 \n",
+      " Action: L | Arm: 0 | Score:   -2 \n",
+      " Action: P | Arm: 0 | Score:   -3 \n",
+      "FINAL SCORE:  -3\n",
+      "-----------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "from jetson_env import JetsonEnv\n",
     "\n",
@@ -141,9 +174,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LED: 0 | Arm: 0 | State:  0 \n",
+      "LED: 0 | Arm: 1 | State:  1 \n",
+      "LED: 0 | Arm: 2 | State:  2 \n",
+      "LED: 0 | Arm: 3 | State:  3 \n",
+      "LED: 1 | Arm: 0 | State:  4 \n",
+      "LED: 1 | Arm: 1 | State:  5 \n",
+      "LED: 1 | Arm: 2 | State:  6 \n",
+      "LED: 1 | Arm: 3 | State:  7 \n",
+      "LED: 2 | Arm: 0 | State:  8 \n",
+      "LED: 2 | Arm: 1 | State:  9 \n",
+      "LED: 2 | Arm: 2 | State: 10 \n",
+      "LED: 2 | Arm: 3 | State: 11 \n",
+      "LED: 3 | Arm: 0 | State: 12 \n",
+      "LED: 3 | Arm: 1 | State: 13 \n",
+      "LED: 3 | Arm: 2 | State: 14 \n",
+      "LED: 3 | Arm: 3 | State: 15 \n"
+     ]
+    }
+   ],
    "source": [
     "def get_led_and_arm(state, nLED=4):\n",
     "    arm = state % nLED\n",
@@ -243,9 +299,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Round 1: [(8, 1), (8, 1), (8, 0), (8, 0), (8, 2), (9, 1), (9, 0), (8, 1), (8, 0), (8, 1), (8, 0), (8, 1), (8, 1), (8, 1), (8, 2)] | Score: -15\n",
+      "Round 2: [(3, 2), (3, 2), (3, 2), (3, 1), (3, 2), (3, 1), (3, 0), (2, 0), (1, 0), (0, 2), (1, 1), (1, 2), (2, 0), (1, 0), (0, 0)] | Score: -15\n",
+      "Round 3: [(5, 0), (4, 2), (5, 2), (6, 0), (5, 2), (6, 2), (7, 1), (7, 0), (6, 1), (6, 2), (7, 0), (6, 0), (5, 0), (4, 2), (5, 0)] | Score: -15\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import random\n",
@@ -345,9 +411,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Game Round 100/100.\n",
+      "\n",
+      "Estimated Optimal Policy:\n",
+      "LED: 0 | Arm: 0 | State:  0 | Best Action: P\n",
+      "LED: 0 | Arm: 1 | State:  1 | Best Action: L\n",
+      "LED: 0 | Arm: 2 | State:  2 | Best Action: L\n",
+      "LED: 0 | Arm: 3 | State:  3 | Best Action: L\n",
+      "LED: 1 | Arm: 0 | State:  4 | Best Action: R\n",
+      "LED: 1 | Arm: 1 | State:  5 | Best Action: P\n",
+      "LED: 1 | Arm: 2 | State:  6 | Best Action: L\n",
+      "LED: 1 | Arm: 3 | State:  7 | Best Action: L\n",
+      "LED: 2 | Arm: 0 | State:  8 | Best Action: R\n",
+      "LED: 2 | Arm: 1 | State:  9 | Best Action: R\n",
+      "LED: 2 | Arm: 2 | State: 10 | Best Action: P\n",
+      "LED: 2 | Arm: 3 | State: 11 | Best Action: L\n",
+      "LED: 3 | Arm: 0 | State: 12 | Best Action: R\n",
+      "LED: 3 | Arm: 1 | State: 13 | Best Action: R\n",
+      "LED: 3 | Arm: 2 | State: 14 | Best Action: R\n",
+      "LED: 3 | Arm: 3 | State: 15 | Best Action: P\n",
+      "\n",
+      "Correct: 16/16\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "from collections import defaultdict\n",
@@ -371,8 +465,8 @@
     "        # use game round to update Q\n",
     "        for s, a in set(game_round):                                    # loop over state-action pairs\n",
     "            idx = min([i for i,x in enumerate(game_round) if x==(s,a)]) # obtain first index where pair appears\n",
-    "            # your code here                                            # append effective final score to scores[s,a]\n",
-    "            # your code here                                            # set Q[s,a] to the mean of scores[s,a]\n",
+    "            scores[s,a].append(-len(game_round[idx:]))                  # append effective final score to scores[s,a]\n",
+    "            Q[s,a] = np.mean(scores[s,a])                               # set Q[s,a] to the mean of scores[s,a]\n",
     "    return Q\n",
     "\n",
     "# run the algorithm\n",
