--- a/Notebook-Solution.ipynb
+++ b/Notebook-Solution.ipynb
@@ -97,30 +97,29 @@
      "output_type": "stream",
      "text": [
       "Starting Round 1 ...\n",
-      " LED: 3    | Arm: 0 | Score:    0 \n",
-      " Action: R | Arm: 1 | Score:   -1 \n",
-      " Action: L | Arm: 0 | Score:   -2 \n",
-      " Action: L | Arm: 0 | Score:   -3 \n",
-      " Action: P | Arm: 0 | Score:   -4 \n",
-      " Action: L | Arm: 0 | Score:   -5 \n",
-      " Action: L | Arm: 0 | Score:   -6 \n",
-      " Action: P | Arm: 0 | Score:   -7 \n",
-      " Action: P | Arm: 0 | Score:   -8 \n",
-      " Action: P | Arm: 0 | Score:   -9 \n",
-      " Action: P | Arm: 0 | Score:  -10 \n",
-      " Action: P | Arm: 0 | Score:  -11 \n",
-      " Action: P | Arm: 0 | Score:  -12 \n",
-      " Action: L | Arm: 0 | Score:  -13 \n",
-      " Action: L | Arm: 0 | Score:  -14 \n",
-      " Action: P | Arm: 0 | Score:  -15 \n",
-      "FINAL SCORE:  -15\n",
+      " LED: 0    | Arm: 0 | Score:    0 \n",
+      " Action: L | Arm: 0 | Score:   -1 \n",
+      " Action: P | Arm: 0 | Score:   -2 \n",
+      "FINAL SCORE:  -2\n",
       "-----------------------------------\n",
       "Starting Round 2 ...\n",
-      " LED: 0    | Arm: 1 | Score:    0 \n",
-      " Action: L | Arm: 0 | Score:   -1 \n",
-      " Action: L | Arm: 0 | Score:   -2 \n",
-      " Action: P | Arm: 0 | Score:   -3 \n",
-      "FINAL SCORE:  -3\n",
+      " LED: 2    | Arm: 3 | Score:    0 \n",
+      " Action: R | Arm: 3 | Score:   -1 \n",
+      " Action: P | Arm: 3 | Score:   -2 \n",
+      " Action: R | Arm: 3 | Score:   -3 \n",
+      " Action: P | Arm: 3 | Score:   -4 \n",
+      " Action: L | Arm: 2 | Score:   -5 \n",
+      " Action: R | Arm: 3 | Score:   -6 \n",
+      " Action: R | Arm: 3 | Score:   -7 \n",
+      " Action: R | Arm: 3 | Score:   -8 \n",
+      " Action: L | Arm: 2 | Score:   -9 \n",
+      " Action: L | Arm: 1 | Score:  -10 \n",
+      " Action: L | Arm: 0 | Score:  -11 \n",
+      " Action: L | Arm: 0 | Score:  -12 \n",
+      " Action: R | Arm: 1 | Score:  -13 \n",
+      " Action: L | Arm: 0 | Score:  -14 \n",
+      " Action: L | Arm: 0 | Score:  -15 \n",
+      "FINAL SCORE:  -15\n",
       "-----------------------------------\n"
      ]
     }
@@ -306,9 +305,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Round 1: [(8, 1), (8, 1), (8, 0), (8, 0), (8, 2), (9, 1), (9, 0), (8, 1), (8, 0), (8, 1), (8, 0), (8, 1), (8, 1), (8, 1), (8, 2)] | Score: -15\n",
-      "Round 2: [(3, 2), (3, 2), (3, 2), (3, 1), (3, 2), (3, 1), (3, 0), (2, 0), (1, 0), (0, 2), (1, 1), (1, 2), (2, 0), (1, 0), (0, 0)] | Score: -15\n",
-      "Round 3: [(5, 0), (4, 2), (5, 2), (6, 0), (5, 2), (6, 2), (7, 1), (7, 0), (6, 1), (6, 2), (7, 0), (6, 0), (5, 0), (4, 2), (5, 0)] | Score: -15\n"
+      "Round 1: [(10, 2), (11, 2), (11, 0), (10, 0), (9, 2), (10, 1)] | Score: -6\n",
+      "Round 2: [(14, 1), (14, 0), (13, 1), (13, 0), (12, 1), (12, 1), (12, 0), (12, 0), (12, 0), (12, 1), (12, 1), (12, 2), (13, 2), (14, 2), (15, 1)] | Score: -15\n",
+      "Round 3: [(10, 0), (9, 0), (8, 0), (8, 0), (8, 1), (8, 1), (8, 0), (8, 0), (8, 2), (9, 1), (9, 2), (10, 0), (9, 2), (10, 1)] | Score: -14\n"
      ]
     }
    ],
