--- a/Notebook-Solution.ipynb
+++ b/Notebook-Solution.ipynb
@@ -97,27 +97,33 @@
      "output_type": "stream",
      "text": [
       "Starting Round 1 ...\n",
-      " LED: 0    | Arm: 0 | Score:    0 \n",
-      " Action: L | Arm: 0 | Score:   -1 \n",
-      " Action: P | Arm: 0 | Score:   -2 \n",
-      "FINAL SCORE:  -2\n",
+      " LED: 3    | Arm: 3 | Score:    0 \n",
+      " Action: R | Arm: 3 | Score:   -1 \n",
+      " Action: R | Arm: 3 | Score:   -2 \n",
+      " Action: L | Arm: 2 | Score:   -3 \n",
+      " Action: P | Arm: 2 | Score:   -4 \n",
+      " Action: P | Arm: 2 | Score:   -5 \n",
+      " Action: P | Arm: 2 | Score:   -6 \n",
+      " Action: R | Arm: 3 | Score:   -7 \n",
+      " Action: P | Arm: 3 | Score:   -8 \n",
+      "FINAL SCORE:  -8\n",
       "-----------------------------------\n",
       "Starting Round 2 ...\n",
-      " LED: 2    | Arm: 3 | Score:    0 \n",
+      " LED: 1    | Arm: 2 | Score:    0 \n",
       " Action: R | Arm: 3 | Score:   -1 \n",
-      " Action: P | Arm: 3 | Score:   -2 \n",
+      " Action: R | Arm: 3 | Score:   -2 \n",
       " Action: R | Arm: 3 | Score:   -3 \n",
-      " Action: P | Arm: 3 | Score:   -4 \n",
-      " Action: L | Arm: 2 | Score:   -5 \n",
-      " Action: R | Arm: 3 | Score:   -6 \n",
-      " Action: R | Arm: 3 | Score:   -7 \n",
-      " Action: R | Arm: 3 | Score:   -8 \n",
-      " Action: L | Arm: 2 | Score:   -9 \n",
-      " Action: L | Arm: 1 | Score:  -10 \n",
+      " Action: L | Arm: 2 | Score:   -4 \n",
+      " Action: P | Arm: 2 | Score:   -5 \n",
+      " Action: P | Arm: 2 | Score:   -6 \n",
+      " Action: L | Arm: 1 | Score:   -7 \n",
+      " Action: R | Arm: 2 | Score:   -8 \n",
+      " Action: L | Arm: 1 | Score:   -9 \n",
+      " Action: L | Arm: 0 | Score:  -10 \n",
       " Action: L | Arm: 0 | Score:  -11 \n",
       " Action: L | Arm: 0 | Score:  -12 \n",
-      " Action: R | Arm: 1 | Score:  -13 \n",
-      " Action: L | Arm: 0 | Score:  -14 \n",
+      " Action: L | Arm: 0 | Score:  -13 \n",
+      " Action: P | Arm: 0 | Score:  -14 \n",
       " Action: L | Arm: 0 | Score:  -15 \n",
       "FINAL SCORE:  -15\n",
       "-----------------------------------\n"
@@ -305,9 +311,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Round 1: [(10, 2), (11, 2), (11, 0), (10, 0), (9, 2), (10, 1)] | Score: -6\n",
-      "Round 2: [(14, 1), (14, 0), (13, 1), (13, 0), (12, 1), (12, 1), (12, 0), (12, 0), (12, 0), (12, 1), (12, 1), (12, 2), (13, 2), (14, 2), (15, 1)] | Score: -15\n",
-      "Round 3: [(10, 0), (9, 0), (8, 0), (8, 0), (8, 1), (8, 1), (8, 0), (8, 0), (8, 2), (9, 1), (9, 2), (10, 0), (9, 2), (10, 1)] | Score: -14\n"
+      "Round 1: [(8, 2), (9, 2), (10, 2), (11, 2), (11, 1), (11, 2), (11, 2), (11, 0), (10, 2), (11, 2), (11, 1), (11, 1), (11, 1), (11, 0), (10, 0)] | Score: -15\n",
+      "Round 2: [(12, 2), (13, 0), (12, 2), (13, 1), (13, 2), (14, 0), (13, 1), (13, 0), (12, 0), (12, 1), (12, 1), (12, 2), (13, 1), (13, 0), (12, 1)] | Score: -15\n",
+      "Round 3: [(13, 0), (12, 1), (12, 2), (13, 0), (12, 1), (12, 1), (12, 2), (13, 0), (12, 2), (13, 1), (13, 0), (12, 1), (12, 1), (12, 0), (12, 1)] | Score: -15\n"
      ]
     }
    ],
@@ -421,9 +427,9 @@
       "\n",
       "Estimated Optimal Policy:\n",
       "LED: 0 | Arm: 0 | State:  0 | Best Action: P\n",
-      "LED: 0 | Arm: 1 | State:  1 | Best Action: L\n",
-      "LED: 0 | Arm: 2 | State:  2 | Best Action: L\n",
-      "LED: 0 | Arm: 3 | State:  3 | Best Action: L\n",
+      "LED: 0 | Arm: 1 | State:  1 | Best Action: R (INCORRECT)\n",
+      "LED: 0 | Arm: 2 | State:  2 | Best Action: R (INCORRECT)\n",
+      "LED: 0 | Arm: 3 | State:  3 | Best Action: R (INCORRECT)\n",
       "LED: 1 | Arm: 0 | State:  4 | Best Action: R\n",
       "LED: 1 | Arm: 1 | State:  5 | Best Action: P\n",
       "LED: 1 | Arm: 2 | State:  6 | Best Action: L\n",
@@ -437,7 +443,7 @@
       "LED: 3 | Arm: 2 | State: 14 | Best Action: R\n",
       "LED: 3 | Arm: 3 | State: 15 | Best Action: P\n",
       "\n",
-      "Correct: 16/16\n"
+      "Correct: 13/16\n"
      ]
     }
    ],
