--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -99,28 +99,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting Round 1 ...\n",
-      " LED: 3    | Arm: 3 | Score:    0 \n",
-      " Action: R | Arm: 3 | Score:   -1 \n",
-      " Action: P | Arm: 3 | Score:   -2 \n",
-      "FINAL SCORE:  -2\n",
-      "-----------------------------------\n",
-      "Starting Round 2 ...\n",
-      " LED: 3    | Arm: 2 | Score:    0 \n",
-      " Action: R | Arm: 3 | Score:   -1 \n",
-      " Action: P | Arm: 3 | Score:   -2 \n",
-      "FINAL SCORE:  -2\n",
-      "-----------------------------------\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from jetson_env import JetsonEnv\n",
     "\n",
@@ -170,32 +151,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "LED: 0 | Arm: 0 | State:  0 \n",
-      "LED: 0 | Arm: 1 | State:  1 \n",
-      "LED: 0 | Arm: 2 | State:  2 \n",
-      "LED: 0 | Arm: 3 | State:  3 \n",
-      "LED: 1 | Arm: 0 | State:  4 \n",
-      "LED: 1 | Arm: 1 | State:  5 \n",
-      "LED: 1 | Arm: 2 | State:  6 \n",
-      "LED: 1 | Arm: 3 | State:  7 \n",
-      "LED: 2 | Arm: 0 | State:  8 \n",
-      "LED: 2 | Arm: 1 | State:  9 \n",
-      "LED: 2 | Arm: 2 | State: 10 \n",
-      "LED: 2 | Arm: 3 | State: 11 \n",
-      "LED: 3 | Arm: 0 | State: 12 \n",
-      "LED: 3 | Arm: 1 | State: 13 \n",
-      "LED: 3 | Arm: 2 | State: 14 \n",
-      "LED: 3 | Arm: 3 | State: 15 \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def get_led_and_arm(state, nLED=4):\n",
     "    arm = state % nLED\n",
@@ -313,19 +271,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Round 1: [(5, 2, -1), (6, Ellipsis, -1), (6, Ellipsis, -1), (6, Ellipsis, -1), (6, Ellipsis, -1), (6, Ellipsis, -1), (6, Ellipsis, -1), (6, Ellipsis, -1), (6, Ellipsis, -1), (6, Ellipsis, -1), (6, Ellipsis, -1), (6, Ellipsis, -1), (6, Ellipsis, -1), (6, Ellipsis, -1), (6, Ellipsis, -1)] | Score: -15\n",
-      "Round 2: [(3, 1, -1), (3, Ellipsis, -1), (3, Ellipsis, -1), (3, Ellipsis, -1), (3, Ellipsis, -1), (3, Ellipsis, -1), (3, Ellipsis, -1), (3, Ellipsis, -1), (3, Ellipsis, -1), (3, Ellipsis, -1), (3, Ellipsis, -1), (3, Ellipsis, -1), (3, Ellipsis, -1), (3, Ellipsis, -1), (3, Ellipsis, -1)] | Score: -15\n",
-      "Round 3: [(5, 0, -1), (4, Ellipsis, -1), (4, Ellipsis, -1), (4, Ellipsis, -1), (4, Ellipsis, -1), (4, Ellipsis, -1), (4, Ellipsis, -1), (4, Ellipsis, -1), (4, Ellipsis, -1), (4, Ellipsis, -1), (4, Ellipsis, -1), (4, Ellipsis, -1), (4, Ellipsis, -1), (4, Ellipsis, -1), (4, Ellipsis, -1)] | Score: -15\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import random\n",
@@ -394,7 +342,7 @@
     "\n",
     "Now that we have discussed an example, you will use these ideas to update the entries in `Q` in the `monte_carlo` function in the code cell below.\n",
     "\n",
-    "### Your Task\n",
+    "### Implement the Method\n",
     "\n",
     "You will implement the **Monte Carlo with Exploring Starts** method in the `monte_carlo` function in the code cell below.  \n",
     "\n",
@@ -402,6 +350,9 @@
     "```python\n",
     "Q = -5*np.ones((nS, nA), dtype=float)   # initialize empty array\n",
     "```\n",
+    "\n",
+    "Of course, this initial estimate isn't so great, but the robot will learn quickly how to improve it!\n",
+    "\n",
     "The robot plays the game for `num_rounds` game rounds.  The results of each game round are saved in the `game_round` list:\n",
     "```python\n",
     "game_round = play_round(env, Q)         # play game round\n",
@@ -438,37 +389,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Game Round 100/100.\n",
-      "\n",
-      "Estimated Optimal Policy:\n",
-      "LED: 0 | Arm: 0 | State:  0 | Best Action: L (INCORRECT)\n",
-      "LED: 0 | Arm: 1 | State:  1 | Best Action: L\n",
-      "LED: 0 | Arm: 2 | State:  2 | Best Action: L\n",
-      "LED: 0 | Arm: 3 | State:  3 | Best Action: L\n",
-      "LED: 1 | Arm: 0 | State:  4 | Best Action: L (INCORRECT)\n",
-      "LED: 1 | Arm: 1 | State:  5 | Best Action: L (INCORRECT)\n",
-      "LED: 1 | Arm: 2 | State:  6 | Best Action: L\n",
-      "LED: 1 | Arm: 3 | State:  7 | Best Action: L\n",
-      "LED: 2 | Arm: 0 | State:  8 | Best Action: L (INCORRECT)\n",
-      "LED: 2 | Arm: 1 | State:  9 | Best Action: L (INCORRECT)\n",
-      "LED: 2 | Arm: 2 | State: 10 | Best Action: L (INCORRECT)\n",
-      "LED: 2 | Arm: 3 | State: 11 | Best Action: L\n",
-      "LED: 3 | Arm: 0 | State: 12 | Best Action: L (INCORRECT)\n",
-      "LED: 3 | Arm: 1 | State: 13 | Best Action: L (INCORRECT)\n",
-      "LED: 3 | Arm: 2 | State: 14 | Best Action: L (INCORRECT)\n",
-      "LED: 3 | Arm: 3 | State: 15 | Best Action: L (INCORRECT)\n",
-      "\n",
-      "Correct: 6/16\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "from collections import defaultdict\n",
@@ -513,38 +436,6 @@
     "# print \n",
     "print('\\nCorrect: %d/16' % sum(np.argmax(Q, axis=1) == correct_policy))"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Outline of the Method\n",
-    "\n",
-    "The **Monte Carlo with Exploring Starts** method begins with an initial guess for the values in `Q`.  In this session, we initialize `Q[s,a]=-5` for each `s` and `a`.  Of course, this initial estimate isn't so great, but the robot will learn quickly how to improve it!\n",
-    "\n",
-    "Then, the robot plays a single game round.  Since the robot initially knows nothing about the game, it makes the most sense for it to select moves entirely at random.  (_Later, once it has gained some understanding of the game dynamics, it will be able to select moves more intelligently._)\n",
-    "\n",
-    "and the results of the round (in `game_round`) are used to update the estimates in `Q`.  \n",
-    "\n",
-    "The loop continues for a total of `num_rounds` game rounds, where the robot updates the estimates in `Q` between rounds.  Although the robot will initially be quite bad at choosing game moves, it will demonstrate a high level of skill later in gameplay!\n",
-    "\n",
-    "Then, as the robot plays the game, the estimates in `Q` will be gradually improved.  You'll have the chance to implement this soon. \n",
-    "\n",
-    "As described above, this method maintains a numpy array `Q` containing the robot's estimates for the highest scores it can possibly attain for each possible combination of starting game state and initial game move.  As you will soon see, the robot will gradually refine these estimates with gameplay; eventually, the estimates will be accurate _enough_ that the robot can use them to derive the optimal policy.\n",
-    "\n",
-    "--\n",
-    "\n",
-    "Then, the robot plays a single round using the `play_round` function, and the results of the round (in `game_round`) are used to update the estimates in `Q`.  The loop continues for a total of `num_rounds` game rounds, where the robot updates the estimates in `Q` between rounds.  Although the robot will initially be quite bad at choosing game moves, it will demonstrate a high level of skill later in gameplay!\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
