--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -279,27 +279,27 @@
     "import random\n",
     "\n",
     "def play_round(env, Q=None):\n",
-    "    if Q is None:                            # default value for Q if not provided\n",
+    "    if Q is None:                               # default value for Q if not provided\n",
     "        Q = -5*np.ones((env.nS, env.nA), dtype=float)\n",
     "    # start the round\n",
     "    game_round = []\n",
-    "    led, arm = env.reset()                   # reset the game\n",
-    "    state = get_state(led, arm, env.nLED)    # initial state\n",
+    "    led, arm = env.reset()                      # reset the game\n",
+    "    state = get_state(led, arm, env.nLED)       # initial state\n",
     "\n",
     "    # select a random action\n",
     "    action = env.get_random_action()            # select initial random action \n",
     "    arm, points, done = env.step(action)        # take initial action\n",
-    "    game_round.append((state, action))  # save initial state, action, and change to score\n",
+    "    game_round.append((state, action))          # save initial state and action\n",
     "\n",
     "    # finish the round\n",
     "    while not done:\n",
-    "        state = get_state(led, arm, env.nLED)       # get next game state\n",
+    "        state = get_state(led, arm, env.nLED)   # get next game state\n",
     "        \n",
     "        # your code here\n",
-    "        action = ...                                # select action from set of best actions\n",
+    "        action = ...                            # select action from set of best actions\n",
     "        \n",
-    "        arm, points, done = env.step(action)        # take action\n",
-    "        game_round.append((state, action))  # save state, action, and change to score\n",
+    "        arm, points, done = env.step(action)    # take action\n",
+    "        game_round.append((state, action))      # save state and action\n",
     "    \n",
     "    return game_round\n",
     "\n",
