--- a/Notebook-Solution.ipynb
+++ b/Notebook-Solution.ipynb
@@ -9,11 +9,11 @@
     "In this session, you will use a branch of machine learning called **reinforcement learning** to teach a robot to play a game.\n",
     "\n",
     "Feel free to use the links below to navigate the notebook:\n",
-    "- [The Game](#thegame)\n",
-    "- [Motivating Reinforcement Learning](#motivatingrl)\n",
-    "- [Investigate Random Behavior](#random)\n",
-    "- [States, Actions, and Optimal Policies](#policies)\n",
-    "- [Monte Carlo with Exploring Starts](#mces)"
+    "- Step 1: [The Game](#thegame)\n",
+    "- Step 2: [Motivating Reinforcement Learning](#motivatingrl)\n",
+    "- Step 3: [Investigate Random Behavior](#random)\n",
+    "- Step 4: [States, Actions, and Optimal Policies](#policies)\n",
+    "- Step 5: [Monte Carlo with Exploring Starts](#mces)"
    ]
   },
   {
