--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -9,11 +9,11 @@
     "In this session, you will use a branch of machine learning called **reinforcement learning** to teach a robot to play a game.\n",
     "\n",
     "Feel free to use the links below to navigate the notebook:\n",
-    "- [The Game](#thegame)\n",
-    "- [Motivating Reinforcement Learning](#motivatingrl)\n",
-    "- [Investigate Random Behavior](#random)\n",
-    "- [States, Actions, and Optimal Policies](#policies)\n",
-    "- [Monte Carlo with Exploring Starts](#mces)"
+    "- Step 1: [The Game](#thegame)\n",
+    "- Step 2: [Motivating Reinforcement Learning](#motivatingrl)\n",
+    "- Step 3: [Investigate Random Behavior](#random)\n",
+    "- Step 4: [States, Actions, and Optimal Policies](#policies)\n",
+    "- Step 5: [Monte Carlo with Exploring Starts](#mces)"
    ]
   },
   {
@@ -100,7 +100,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from jetson_env import JetsonEnv\n",
@@ -152,7 +154,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def get_led_and_arm(state, nLED=4):\n",
@@ -272,7 +276,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -390,7 +396,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import sys\n",
