--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -323,7 +323,7 @@
     "\n",
     "So far, we have mentioned that the estimates in `Q` will be gradually improved with gameplay, but we haven't learned how **_exactly_** the robot will accomplish this.  This is what you will learn now, and it's the last piece of the puzzle before you're ready to complete your implementation of the **Monte Carlo with Exploring Starts** method!\n",
     "\n",
-    "We'll begin by considering how the robot can estimate an entry corresponding to a particular state-action pair `s,a`.  For instance, consider `s=15` and `a=0`, or `Q[15,0]`.  Remember that `Q[15,0]` contains the robot's **estimate** for the **highest** score it can possibly obtain in the game, if the game starts in state `15`, and the robot selects action `0` for its first move.  \n",
+    "We'll begin by considering how the robot can estimate an entry corresponding to a particular state-action pair `(s, a)`.  For instance, consider `s=15` and `a=0`, or `Q[15,0]`.  Remember that `Q[15,0]` contains the robot's **estimate** for the **highest** score it can possibly obtain in the game, if the game starts in state `15`, and the robot selects action `0` for its first move.  \n",
     "\n",
     "> The main idea behind updating the values in `Q` is that the robot will play many game rounds that begin in state `s=15`, where the robot selects action `a=0` as its first move, and it will get a useful estimate for `Q[15,0]` simply by averaging the final scores obtained from these rounds.  \n",
     "\n",
@@ -388,7 +388,7 @@
     "    # your code here                                            # set Q[s,a] to the mean of scores[s,a]\n",
     "```\n",
     "\n",
-    "You need only complete the two lines in the code snippet above to complete the implementation.  Once you have finished, run the code cell below to print your robot's estimated optimal policy after playing the game for 100 rounds.\n",
+    "You need only complete the two lines in the code snippet above to complete the implementation.  Once you have finished, run the code cell below to print your robot's estimated optimal policy after playing the game for `100` rounds.\n",
     "\n",
     "Next, you'll learn how to run the code in real time on your robot, to visualize how it learns!"
    ]
