--- a/1_Hardware-Components.ipynb
+++ b/1_Hardware-Components.ipynb
@@ -151,6 +151,7 @@
     "\n",
     "**Step 3**: Make sure your Jetson is powered down before starting your wiring, and triple check it before turning on!  \n",
     "\n",
+    "![Jetson](images/jetson3.png)"
     "![Wiring diagram](images/image3.jpg)"
    ]
   },
