--- a/1_Hardware-Components.ipynb
+++ b/1_Hardware-Components.ipynb
@@ -151,7 +151,8 @@
     "\n",
     "**Step 3**: Make sure your Jetson is powered down before starting your wiring, and triple check it before turning on!  \n",
     "\n",
-    "![Jetson](images/jetson3.png)"
+    "![Jetson](images/jetson3.jpg)\n",
+    "\n",
     "![Wiring diagram](images/image3.jpg)"
    ]
   },
@@ -251,21 +252,21 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
